[package]
name = "winit_20240517"
version = "0.1.0"
edition = "2021"

[dependencies]
array2d = "0.3.2"
circular-buffer = "0.1.7"
env_logger = "0.11.3"
log = "0.4.21"
pixels = "0.13.0"
rgb = "0.8.37"
winit = { version = "0.30.0", features = ["rwh_06", "rwh_05", "rwh_04", "x11"], default-features = false }

[lints.rust]
unused = "allow"
